--- a/site.yml
+++ b/site.yml
@@ -9,6 +9,11 @@ content:
   - url: .
     branches:
     - HEAD
+  # the docs-server git is just present for the test build to satisfy used refrences
+  # the real build is made in the docs repo using correct values
+  - url: https://github.com/owncloud/docs-server.git
+    branches:
+    - master
 
 ui:
   output_dir: assets
@@ -27,6 +32,39 @@ asciidoc:
     idprefix: ''
     idseparator: '-'
     experimental: ''
+#   common
+    docs-base-url: 'https://doc.owncloud.com'
+    oc-contact-url: 'https://owncloud.com/contact/'
+    oc-help-url: 'https://owncloud.com/docs-guides/'
+    oc-marketplace-url: 'https://marketplace.owncloud.com'
+    oc-central-url: 'https://central.owncloud.org'
+    oc-support-url: 'https://owncloud.com/support'
+#   server
+    # note that the version attributes just need to be present and have next as key
+    # as they are just here for the test build
+    latest-server-version: 'next'
+    previous-server-version: 'next'
+    latest-server-download-version: 'next'
+    current-server-version: 'next'
+    oc-changelog-url: 'https://owncloud.com/changelog/server/'
+    oc-install-package-url: 'https://software.opensuse.org//download.html?project=isv%3AownCloud%3Aserver%3A10&package=owncloud-complete-files'
+    oc-examples-server-url: 'https://owncloud.install.com/owncloud'
+    oc-examples-server-ip: '127.0.0.1'
+    oc-examples-username: 'username'
+    oc-examples-password: 'password'
+    oc-complete-name: 'owncloud-complete-20220112'
+    occ-command-example-prefix: 'sudo -u www-data php occ'
+    occ-command-example-prefix-no-sudo: 'php occ'
+    php-net-url: 'https://www.php.net'
+    php-supported-versions-url: 'https://www.php.net/supported-versions.php'
+    http-status-codes-base-url: 'https://developer.mozilla.org/en-US/docs/Web/HTTP/Status'
+    std-port-http: '8080'
+    std-port-memcache: '11211'
+    std-port-mysql: '3306'
+    std-port-redis: '6379'
+#   webui
+    latest-webui-version: 'next'
+    previous-webui-version: 'next'
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
@@ -34,3 +72,4 @@ asciidoc:
     - ./lib/extensions/tabs.js
     - ./lib/extensions/remote-include-processor.js
     - ./node_modules/asciidoctor-kroki/src/asciidoctor-kroki.js
+
