--- a/site.yml
+++ b/site.yml
@@ -39,6 +39,9 @@ asciidoc:
     oc-marketplace-url: 'https://marketplace.owncloud.com'
     oc-central-url: 'https://central.owncloud.org'
     oc-support-url: 'https://owncloud.com/support'
+#   docs
+    latest-docs-version: 'next'
+    previous-docs-version: 'next'
 #   server
     # note that the version attributes just need to be present and have next as key
     # as they are just here for the test build
@@ -68,6 +71,18 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
+#   desktop
+    latest-desktop-version: 'next'
+    previous-desktop-version: 'next'
+#   ios-app
+    latest-ios-version: 'next'
+    previous-ios-version: 'next'
+#   android
+    latest-android-version: 'next'
+    previous-android-version: 'next'
+#   branded
+    latest-branded-version: 'next'
+    previous-branded-version: 'next'
   extensions:
     - ./lib/extensions/tabs.js
     - ./lib/extensions/remote-include-processor.js
