--- a/site.yml
+++ b/site.yml
@@ -72,6 +72,7 @@ asciidoc:
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
     ocis-version: '1.20.0'
+    ocis-ext-includes: https://raw.githubusercontent.com/owncloud/ocis/docs/extensions/_includes/
 #   desktop
     latest-desktop-version: 'next'
     previous-desktop-version: 'next'
