--- a/site.yml
+++ b/site.yml
@@ -9,9 +9,12 @@ content:
   - url: .
     branches:
     - HEAD
-  # the docs-server git is just present for the test build to satisfy used references
+  # the docs-xxx are just present for the test build to satisfy used references
   # the real build is made in the docs repo using correct values
   - url: https://github.com/owncloud/docs-server.git
+    branches:
+    - master
+  - url: https://github.com/owncloud/docs-webui.git
     branches:
     - master
 
