--- a/antora.yml
+++ b/antora.yml
@@ -7,4 +7,21 @@ nav:
 
 asciidoc:
   attributes:
+    # used in deployment/services
     ocis-services-includes: 'https://raw.githubusercontent.com/owncloud/ocis/docs/services/_includes/'
+    # used in orchestration.adoc
+    # tab_x will be used as part of the url accessing the raw content
+    # tab_x_tab_text will be used as tab text shown for tab_x
+    tab_1: master
+    tab_2: tab_2
+    tab_3: tab_3
+    tab_1_tab_text: master
+    tab_2_tab_text: 0.1.0
+    tab_3_tab_text: 0.2.0
+    use_tab_2:  # set to any value if tab 2 should be shown
+    use_tab_3:  # set to any value if tab 3 should be shown
+    secrets: deployment/container/orchestration/orchestration.adoc#define-secrets
+    ocis-charts-raw-url: https://raw.githubusercontent.com/owncloud/ocis-charts/
+    kube-versions-url: /charts/ocis/docs/kube-versions.adoc
+    values-versions-url: /charts/ocis/docs/values.adoc.yaml
+    values-desc-versions-url: /charts/ocis/docs/values-desc-table.adoc
