--- a/modules/ROOT/examples/deployment/container/orchestration/builtin-user-mgmt-secrets-tab-2.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/builtin-user-mgmt-secrets-tab-2.yaml
@@ -50,3 +50,33 @@ data:
   #  - `openssl x509 -req -extensions SAN -extfile <(cat /etc/ssl/openssl.cnf <(printf "\n[SAN]\nsubjectAltName=DNS:idm")) -days 365 -in ldap.csr -CA ldap-ca.crt -CAkey ldap-ca.key -out ldap.crt -CAcreateserial`
   #  - `cat ldap.crt | base64 | tr -d '\n' && echo`
   ldap.crt: XXXXXXXXXXXXX
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: admin-user
+type: Opaque
+data:
+  # how to generate: base64 encode a UUID V4
+  # example generation command: `cat /proc/sys/kernel/random/uuid | tr -d '\n' | base64`
+  user-id: XXXXXXXXXXXXX
+
+  # how to generate: base64 encode a random string (reasonable long and mixed characters)
+  # example generation command: `tr -cd '[a-zA-Z0-9],.' < /dev/urandom | fold -w 50 | head -n 1 | tr -d '\n' | base64`
+  password: XXXXXXXXXXXXX
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: idp-secrets
+type: Opaque
+data:
+  # how to generate: base64 encode a random 32 byte string (mixed characters)
+  # example generation command: `openssl rand 32 | base64`
+  encryption.key: XXXXXXXXXXXXX
+
+  # how to generate: base64 encode a private key (eg. RSA, ensure that you use reasonable long key size)
+  # example generation command: `openssl genpkey -algorithm RSA -pkeyopt rsa_keygen_bits:4096 2> /dev/null | base64 | tr -d '\n'`
+  private-key.pem: XXXXXXXXXXXXX
