--- a/site.yml
+++ b/site.yml
@@ -72,7 +72,7 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
-    ocis-version: '2.0.0-beta.8'
+    ocis-version: '2.0.0'
     ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/testing/'
 #   desktop
     latest-desktop-version: 'next'
@@ -90,4 +90,3 @@ asciidoc:
     - ./lib/extensions/tabs.js
     - ./lib/extensions/remote-include-processor.js
     - ./node_modules/asciidoctor-kroki/src/asciidoctor-kroki.js
-
