--- a/antora.yml
+++ b/antora.yml
@@ -8,30 +8,39 @@ nav:
 asciidoc:
   attributes:
     # used to define the include path for services without trailing /
-    # note that any changes of this path also need adjustment in 
+    # note that any changes of this path also need adjustment in
     # https://github.com/owncloud/ocis-charts/tree/master/charts/ocis/docs
     s-path: deployment/services/s-list
     #
-    # used in deployment/services
-    # note that we are using the 'docs' branch of the ocis repo, not the main branch!
-    ocis-services-includes: 'https://raw.githubusercontent.com/owncloud/ocis/docs/services/_includes/'
-    #
-    # used in orchestration.adoc
-    # helm_tab_x will be used to assemble the url (tag) accessing the raw content for helm charts
-    helm_tab_1: master
-    helm_tab_2: tab_2
-    helm_tab_3: tab_3
-    # compose_tab_x will be used to assemble the url (tag) accessing the link for docker compose
-    compose_tab_1: master
-    compose_tab_2: tab_2
-    compose_tab_3: tab_3
-    # tab_x_tab_text will be used as tab text shown for tab_x, note we use the same tab texts for helm and compose
-    tab_1_tab_text: 0.0.0
-    tab_2_tab_text: 0.1.0
-    tab_3_tab_text: 0.2.0
+    # used in orchestration.adoc and in partials/env-and-yaml.adoc for all services
     # define to use tabs, the first tab is always active
-    use_tab_2:  # set to any value if tab 2 should be shown
+    use_tab_2: true # set to any value if tab 2 should be shown
     use_tab_3:  # set to any value if tab 3 should be shown
+    # service_tab_x will be used to assemble the url (tag) accessing the link for the services (tag)
+    service_tab_1: docs
+    service_tab_2: docs
+    service_tab_3: tab_3
+    # service_tab_x_tab_text will be used as tab text shown for tab_x
+    # note that we are using the 'docs' branch of the ocis repo, not the main branch!
+    service_tab_1_tab_text: latest
+    service_tab_2_tab_text: 2.0.0
+    service_tab_3_tab_text: 2.1.0
+    # compose_tab_x will be used to assemble the url (tag) accessing the link for the services (tag)
+    compose_tab_1: master
+    compose_tab_2: v2.0.0
+    compose_tab_3: tab_3
+    # compose_tab_x_tab_text will be used as tab text shown for tab_x
+    compose_tab_1_tab_text: latest
+    compose_tab_2_tab_text: 2.0.0
+    compose_tab_3_tab_text: 2.1.0
+    # helm_tab_x will be used to assemble the url (tag) accessing the raw content for helm charts (tag)
+    helm_tab_1: master
+    helm_tab_2: v0.1.0
+    helm_tab_3: tab_3
+    # helm_tab_x_tab_text will be used as tab text shown for tab_x
+    helm_tab_1_tab_text: latest
+    helm_tab_2_tab_text: 0.1.0
+    helm_tab_3_tab_text: 0.2.0
     # set attributes defining path components which will be assembled in the document
     secrets: deployment/container/orchestration/orchestration.adoc#define-secrets
     ocis-charts-raw-url: https://raw.githubusercontent.com/owncloud/ocis-charts/
@@ -40,3 +49,6 @@ asciidoc:
     values-desc-versions-url: /charts/ocis/docs/values-desc-table.adoc
     composer-raw-url: https://github.com/owncloud/ocis/tree/
     composer-final-path: /deployments/examples
+    # used in deployment/services via partials/env-and-yaml.adoc
+    ocis-services-raw-url: 'https://raw.githubusercontent.com/owncloud/ocis/'
+    ocis-services-final-path: '/services/_includes/'
