--- a/site.yml
+++ b/site.yml
@@ -72,8 +72,8 @@ asciidoc:
 #   ocis
     latest-ocis-version: 'next'
     previous-ocis-version: 'next'
-    ocis-version: '2.0.0-beta.8'
-    ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/testing/'
+    ocis-version: '2.0.0'
+    ocis-downloadpage-url: 'https://download.owncloud.com/ocis/ocis/stable/'
 #   desktop
     latest-desktop-version: 'next'
     previous-desktop-version: 'next'
