--- a/antora.yml
+++ b/antora.yml
@@ -16,12 +16,12 @@ asciidoc:
     # define to use tabs, the first tab is always active
     use_tab_2: true # set to any value if tab 2 should be shown
     use_tab_3:  # set to any value if tab 3 should be shown
-    # service_tab_x will be used to assemble the url (tag) accessing the link for the services (tag)
-    service_tab_1: docs
-    service_tab_2: docs
+    # service_tab_x will be used to assemble the url accessing the link for the services
+    service_tab_1: docs-stable-2.0
+    service_tab_2: docs-stable-2.0
     service_tab_3: tab_3
     # service_tab_x_tab_text will be used as tab text shown for tab_x
-    # note that we are using the 'docs' branch of the ocis repo, not the main branch!
+    # note that we are refering via the 'service_tab_x' branch to the ocis repo, not the master branch!
     service_tab_1_tab_text: latest
     service_tab_2_tab_text: 2.0.0
     service_tab_3_tab_text: 2.1.0
