--- a/modules/ROOT/examples/deployment/container/orchestration/builtin-user-mgmt-secrets-tab-3.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/builtin-user-mgmt-secrets-tab-3.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-bind-secrets
+  name: ldap-bind-secrets # default for secretRefs.ldapSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random string (reasonable long and mixed characters)
@@ -21,7 +21,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-ca
+  name: ldap-ca # default for secretRefs.ldapCaRef
 type: Opaque
 data:
   # how to generate: base64 encode the pem-encoded certificate of a (self-signed) x509 certificate authority
@@ -35,7 +35,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-cert
+  name: ldap-cert # default for secretRefs.ldapCertRef
 type: Opaque
 data:
   # how to generate: base64 encode a private key (eg. ed25519, ensure that you use reasonable long key size)
@@ -55,7 +55,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: admin-user
+  name: admin-user # default for secreRefs.adminUserSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a UUID V4
@@ -70,7 +70,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: idp-secrets
+  name: idp-secrets # default for secretRefs.idpSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random 32 byte string (mixed characters)
