--- a/modules/ROOT/examples/deployment/container/orchestration/email-notification-tab-3.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/email-notification-tab-3.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: notifications-smtp-secret
+  name: notifications-smtp-secret # needs to be set to `secretRefs.notificationsSmtpSecretRef`
 type: Opaque
 data:
   # Username for authentication against the SMTP host.
