--- a/modules/ROOT/examples/deployment/container/orchestration/external-user-mgmt-secrets-tab-2.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/external-user-mgmt-secrets-tab-2.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-bind-secrets
+  name: ldap-bind-secrets # default for secretRefs.ldapSecretRef
 type: Opaque
 data:
   # Base64 encoded password for the LDAP bind user.
@@ -16,7 +16,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ldap-ca
+  name: ldap-ca # default for secretRefs.ldapCaRef
 type: Opaque
 data:
   # Base64 encoded certificate of the CA that issued the LDAP server certificate.
