--- a/modules/ROOT/examples/deployment/container/orchestration/generic-secrets-tab-1.yaml
+++ b/modules/ROOT/examples/deployment/container/orchestration/generic-secrets-tab-1.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: jwt-secret
+  name: jwt-secret # default for secretRefs.jwtSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random string (reasonable long and mixed characters)
@@ -13,7 +13,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: machine-auth-api-key
+  name: machine-auth-api-key # default for secretRefs.machineAuthApiKeySecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random string (reasonable long and mixed characters)
@@ -24,7 +24,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: storage-system
+  name: storage-system # default for secretRefs.storagesystemSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a UUID V4
@@ -39,7 +39,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: storage-system-jwt-secret
+  name: storage-system-jwt-secret # default for secretRefs.storagesystemJwtSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random string (reasonable long and mixed characters)
@@ -50,7 +50,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: transfer-secret
+  name: transfer-secret # default for secretRefs.transferSecretSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random string (reasonable long and mixed characters)
@@ -61,7 +61,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: thumbnails-transfer-secret
+  name: thumbnails-transfer-secret # default for secretRefs.thumbnailsSecretRef
 type: Opaque
 data:
   # how to generate: base64 encode a random string (reasonable long and mixed characters)
