Improve changed envvar list by version

--- a/antora.yml
+++ b/antora.yml
@@ -27,6 +27,10 @@ asciidoc:
     # compose_tab_x_tab_text will be used as tab text shown for tab_x
     compose_tab_1_tab_text: 'master' # latest stable including patch releases like 5.0.0
 
+    # this is the first part of the name for envvars between major versions that will be added or removed
+    # example for full name: 4.0.0-5.0.0-added.adoc or 4.0.0-5.0.0-removed.adoc
+    env_var_delta_name: '4.0.0-5.0.0'
+
     # helm_tab_x will be used to assemble the url (tag) accessing the raw content for helm charts (tag)
     # note that tab 2 always contains the actual release and tab 3 the former
     helm_tab_1: 'master'
