Extension: Implement dynamic loading attributes

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "asciidoctor-kroki": "^0.18.1",
     "cheerio": "^1.0.0",
     "html-entities": "2.5.2",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
