Fix unintended attribute value in antora.yml overwrite by backport

--- a/antora.yml
+++ b/antora.yml
@@ -39,14 +39,14 @@ asciidoc:
     # note when literally changing the word 'master' to something else, you also must adapt 'env-and-yaml.adoc'.
     # this does not apply to branched releases using semver, only to the master branch! 
     # 'master' for the next branch or '7.1.0' for a production branch including patch releases like `7.1.1'
-    service_tab_text: 'master'
+    service_tab_text: '7.1.1'
 
     # the compose_url_component is used to assemble the url (tag) accessing source files from the ocis repo
     # 'master' for the next branch or 'v7.1.0' for a production branch
     # note the v ! as it is tagged for anything else than master !!
     # only use values that are tagged in the ocis repo.
     # example: {compose_url}{compose_url_component}{compose_final_path}
-    compose_url_component: 'master'
+    compose_url_component: 'v7.1.1'
 
     # this is the first part of the name for envvars between major versions that will be added or removed
     # example for full name: 7.0.0-7.1.0-added.adoc or 7.0.0-7.1.0-removed.adoc
